k8cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /apple
          backend:
            service:
                name: apple-service
                port:
                   number: 5678
        - pathType: Prefix
          path: /banana
          backend:
            service:
                name: banana-service
                port:
                   number: 5678
